# rmlst-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.conda_env/conda-meta/: bzip2-1.0.8-h500dc9f_8.json  ca-certificates-2025.11.12-hbd8a1cb_0.json  history  icu-75.1-h120a0e1_0.json  libexpat-2.7.3-heffb93a_0.json  libffi-3.5.2-h750e83c_0.json  liblzma-5.8.1-hd471939_2.json  libmpdec-4.0.0-h6e16a3a_0.json  libsqlite-3.51.1-h6cc646a_0.json  libzlib-1.3.1-hd23fc13_2.json  ncurses-6.5-h0622a9a_3.json  openssl-3.6.0-h230baf5_0.json  pip-25.3-pyh145f28c_0.json  python-3.14.1-hf88997e_100_cp314.json  python_abi-3.14-8_cp314.json  readline-8.2-h7cca4af_2.json  tk-8.6.13-hf689a15_3.json  tzdata-2025b-h78e105d_0.json  zstd-1.5.7-h3eecb57_6.json
.conda_env/include/python3.14/: pyconfig.h
.conda_env/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.conda_env/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.conda_env/share/terminfo/64/: ddr  dec-vt220
.conda_env/share/terminfo/65/: emu-220
.conda_env/share/terminfo/67/: go140  go140w  go225
.conda_env/share/terminfo/68/: hazel  hp2392  hp2641a  (+6 more)
.github/: copilot-instructions.md  spec.md  todo.md
.github/workflows/: ci.yml
galaxy/: rmlst_cli.xml
recipe/: meta.yaml
src/rmlst_cli/: __init__.py  api.py  cli.py  fasta.py  formats.py  http.py  io.py  types.py
tests/: test_api.py  test_cli.py  test_formats.py  test_integration.py
tests/fixtures/: api_response.json  invalid.fasta  real_valid_small.fasta  small.fasta
(+122 files in other folders)
