[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rmlst-cli"
dynamic = ["version"]
description = "rmlst-cli is a simple tool to use the rMLST API through the command line."
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = "MIT"
authors = [
  { name = "Povilas Matusevicius", email = "pmat@ssi.dk" },
]
maintainers = [
  { name = "Povilas Matusevicius", email = "pmat@ssi.dk" },
]
urls.Homepage = "https://github.com/ssi-dk/rmlst_cli"
urls.Source = "https://github.com/ssi-dk/rmlst_cli"
urls.Issues = "https://github.com/ssi-dk/rmlst_cli/issues"

dependencies = [
  "click",
  "requests",
  "biopython",
]

[project.scripts]
rmlst = "rmlst_cli.cli:main"
rmlst-cli = "rmlst_cli.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/rmlst_cli"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
